objects/Engagements__c.object
<CustomObject>
    <fields>
        <fullName>AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The AVP who works with the partner for the training program</inlineHelpText>
        <label>AVP</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Vice Presidents and Staff, Vice President and Staff - Labor Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>51-199 New Business</fullName>
                </value>
                <value>
                    <fullName>51-199 Renewals</fullName>
                </value>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>Commercial Business</fullName>
                </value>
                <value>
                    <fullName>FEHBP Account Management</fullName>
                </value>
                <value>
                    <fullName>Healthcare/Education/Par</fullName>
                </value>
                <value>
                    <fullName>Labor Affairs</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
                <value>
                    <fullName>State &amp; Municipalities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCAS_Segment_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCAS Segment Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Lead_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Business_Segment_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Business Segment Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Lead_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Care First's Deployment Partner who is receiving training.</description>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Training_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Account_Team__c</fullName>
        <label>Service Account Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Royal</fullName>
                </value>
                <value>
                    <fullName>Team Indigo</fullName>
                </value>
                <value>
                    <fullName>Team Teal</fullName>
                </value>
                <value>
                    <fullName>Team Ocean</fullName>
                </value>
                <value>
                    <fullName>Team Sky</fullName>
                </value>
                <value>
                    <fullName>Team Sapphire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The team leader who works with the partner on the training program</inlineHelpText>
        <label>Team Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Lead_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Enagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X200_Segment_Leaders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>200+ Segment Leaders</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Lead_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X51_199_Segment_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>51-199 Segment Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Lead_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Used for determining who is in charge of which Engagement</description>
    <label>Engagement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>AVP__c</columns>
        <columns>Team_Leader__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>